--- a/app/src/main/res/layout/activity_list_add.xml
+++ b/app/src/main/res/layout/activity_list_add.xml
@@ -15,11 +15,10 @@
 
     <Button
         android:id="@+id/btnAdd"
-        android:layout_margin="@dimen/activity_horizontal_margin"
+        android:layout_margin="@dimen/small_margin"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:drawableLeft="@android:drawable/ic_menu_add"
         android:text="@string/button_add"/>
-
 
 </LinearLayout>
