--- a/app/src/main/res/layout/activity_car_location.xml
+++ b/app/src/main/res/layout/activity_car_location.xml
@@ -11,6 +11,8 @@
         android:id="@+id/tabs"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        app:tabMaxWidth="0dp"
+        app:tabGravity="fill"
         app:tabMode="fixed"/>
 
     <android.support.v4.view.ViewPager
