--- a/app/src/main/res/layout/activity_consist.xml
+++ b/app/src/main/res/layout/activity_consist.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:tools="http://schemas.android.com/tools"
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:orientation="vertical"
     tools:context="com.connriver.connrail.ConsistActivity">
 
@@ -40,7 +40,7 @@
 
     <Button
         android:id="@+id/btnConsistAdd"
-        android:layout_margin="@dimen/activity_horizontal_margin"
+        android:layout_margin="@dimen/small_margin"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:drawableLeft="@android:drawable/ic_menu_add"
