--- a/app/src/main/res/layout/activity_spot_add_edit.xml
+++ b/app/src/main/res/layout/activity_spot_add_edit.xml
@@ -1,86 +1,94 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:tools="http://schemas.android.com/tools"
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical"
-    tools:context="com.connriver.connrail.SpotAddEdit">
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/activity_horizontal_margin"
-        android:layout_marginLeft="@dimen/small_margin"
-        android:text="@string/town" />
-
-    <EditText
-        android:id="@+id/etSpotTown"
-        android:layout_marginLeft="@dimen/small_margin"
-        android:layout_marginBottom="@dimen/activity_horizontal_margin"
-        android:maxLines="1"
-        android:maxLength="16"
-        android:inputType="textCapWords"
-        android:nextFocusForward="@+id/etSpotIndustry"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="@dimen/small_margin"
-        android:text="@string/industry" />
-
-    <EditText
-        android:id="@+id/etSpotIndustry"
-        android:layout_marginLeft="@dimen/small_margin"
-        android:layout_marginBottom="@dimen/activity_horizontal_margin"
-        android:maxLines="1"
-        android:maxLength="16"
-        android:inputType="textCapWords"
-        android:nextFocusForward="@+id/etSpotIndustry"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="@dimen/small_margin"
-        android:text="@string/track" />
-
-    <EditText
-        android:id="@+id/etSpotTrack"
-        android:maxLines="1"
-        android:layout_marginLeft="@dimen/small_margin"
-        android:layout_marginBottom="@dimen/activity_horizontal_margin"
-        android:inputType="textCapWords"
-        android:maxLength="16"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:nextFocusForward="@+id/etCarNotes"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    tools:context="com.connriver.connrail.SpotAddEdit"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:orientation="vertical">
 
-        <Button
-            android:id="@+id/btnSpotSave"
-            android:layout_width="0dp"
-            android:layout_weight="1"
-            android:enabled="false"
+        <TextView
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/button_save"/>
-        <Button
-            android:id="@+id/btnSpotDelete"
-            android:layout_width="0dp"
-            android:layout_weight="1"
-            android:enabled="false"
+            android:layout_marginTop="@dimen/activity_horizontal_margin"
+            android:layout_marginLeft="@dimen/small_margin"
+            android:text="@string/town" />
+
+        <EditText
+            android:id="@+id/etSpotTown"
+            android:layout_marginLeft="@dimen/small_margin"
+            android:layout_marginRight="@dimen/small_margin"
+            android:layout_marginBottom="@dimen/activity_horizontal_margin"
+            android:maxLines="1"
+            android:maxLength="16"
+            android:inputType="textCapWords"
+            android:nextFocusForward="@+id/etSpotIndustry"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+
+        <TextView
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/button_delete"/>
+            android:layout_marginLeft="@dimen/small_margin"
+            android:text="@string/industry" />
+
+        <EditText
+            android:id="@+id/etSpotIndustry"
+            android:layout_marginLeft="@dimen/small_margin"
+            android:layout_marginRight="@dimen/small_margin"
+            android:layout_marginBottom="@dimen/activity_horizontal_margin"
+            android:maxLines="1"
+            android:maxLength="16"
+            android:inputType="textCapWords"
+            android:nextFocusForward="@+id/etSpotIndustry"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="@dimen/small_margin"
+            android:text="@string/track" />
+
+        <EditText
+            android:id="@+id/etSpotTrack"
+            android:maxLines="1"
+            android:layout_marginLeft="@dimen/small_margin"
+            android:layout_marginRight="@dimen/small_margin"
+            android:layout_marginBottom="@dimen/activity_horizontal_margin"
+            android:inputType="textCapWords"
+            android:maxLength="16"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:nextFocusForward="@+id/etCarNotes"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <Button
+                android:id="@+id/btnSpotSave"
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:enabled="false"
+                android:layout_height="wrap_content"
+                android:text="@string/button_save"/>
+            <Button
+                android:id="@+id/btnSpotDelete"
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:enabled="false"
+                android:layout_height="wrap_content"
+                android:text="@string/button_delete"/>
+
+        </LinearLayout>
 
     </LinearLayout>
-
-</LinearLayout>
+</ScrollView>
