--- a/app/src/main/res/layout/dialog_spot_days.xml
+++ b/app/src/main/res/layout/dialog_spot_days.xml
@@ -1,185 +1,188 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical">
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/small_margin"
-        android:orientation="horizontal">
-
-        <TextView
-            android:textAppearance="?android:attr/textAppearanceSmall"
-            android:text="@string/town"
-            android:gravity="right"
-            android:layout_width="match_parent"
-            android:layout_weight=".7"
-            android:layout_height="wrap_content" />
-
-        <TextView
-            android:id="@+id/tvSpotTown"
-            android:textAppearance="?android:attr/textAppearanceSmall"
-            android:text="[town]"
-            android:layout_weight=".3"
-            android:paddingLeft="@dimen/small_margin"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
-
-        <TextView
-            android:textAppearance="?android:attr/textAppearanceSmall"
-            android:text="@string/industry"
-            android:gravity="right"
-            android:layout_width="match_parent"
-            android:layout_weight=".7"
-            android:layout_height="wrap_content" />
-
-        <TextView
-            android:id="@+id/tvSpotIndustry"
-            android:textAppearance="?android:attr/textAppearanceSmall"
-            android:text="[industry]"
-            android:layout_weight=".3"
-            android:paddingLeft="@dimen/small_margin"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
-
-        <TextView
-            android:textAppearance="?android:attr/textAppearanceSmall"
-            android:text="@string/track"
-            android:gravity="right"
-            android:layout_width="match_parent"
-            android:layout_weight=".7"
-            android:layout_height="wrap_content" />
-
-        <TextView
-            android:id="@+id/tvSpotTrack"
-            android:textAppearance="?android:attr/textAppearanceSmall"
-            android:text="[track]"
-            android:layout_weight=".3"
-            android:paddingLeft="@dimen/small_margin"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
-    </LinearLayout>
-
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:layout_marginTop="@dimen/small_margin"
-        android:layout_marginBottom="@dimen/small_margin"
-        android:background="@android:color/darker_gray"/>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:orientation="vertical">
 
         <LinearLayout
-            android:layout_width="0dp"
-            android:layout_weight="1"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:layout_marginTop="@dimen/small_margin"
+            android:orientation="horizontal">
+
+            <TextView
+                android:textAppearance="?android:attr/textAppearanceSmall"
+                android:text="@string/town"
+                android:gravity="right"
+                android:layout_width="match_parent"
+                android:layout_weight=".7"
+                android:layout_height="wrap_content" />
+
+            <TextView
+                android:id="@+id/tvSpotTown"
+                android:textAppearance="?android:attr/textAppearanceSmall"
+                android:text="[town]"
+                android:layout_weight=".3"
+                android:paddingLeft="@dimen/small_margin"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <TextView
+                android:textAppearance="?android:attr/textAppearanceSmall"
+                android:text="@string/industry"
+                android:gravity="right"
+                android:layout_width="match_parent"
+                android:layout_weight=".7"
+                android:layout_height="wrap_content" />
+
+            <TextView
+                android:id="@+id/tvSpotIndustry"
+                android:textAppearance="?android:attr/textAppearanceSmall"
+                android:text="[industry]"
+                android:layout_weight=".3"
+                android:paddingLeft="@dimen/small_margin"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <TextView
+                android:textAppearance="?android:attr/textAppearanceSmall"
+                android:text="@string/track"
+                android:gravity="right"
+                android:layout_width="match_parent"
+                android:layout_weight=".7"
+                android:layout_height="wrap_content" />
+
+            <TextView
+                android:id="@+id/tvSpotTrack"
+                android:textAppearance="?android:attr/textAppearanceSmall"
+                android:text="[track]"
+                android:layout_weight=".3"
+                android:paddingLeft="@dimen/small_margin"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
+        </LinearLayout>
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:layout_marginTop="@dimen/small_margin"
+            android:layout_marginBottom="@dimen/small_margin"
+            android:background="@android:color/darker_gray"/>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
 
             <LinearLayout
-                android:layout_width="match_parent"
+                android:layout_width="0dp"
+                android:layout_weight="1"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal">
+                android:orientation="vertical">
 
-                <TextView
-                    android:textAppearance="?android:attr/textAppearanceSmall"
-                    android:text="@string/lading"
-                    android:gravity="right"
+                <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_weight=".65"
-                    android:layout_height="wrap_content" />
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal">
 
-                <TextView
-                    android:id="@+id/tvSpotLading"
-                    android:textAppearance="?android:attr/textAppearanceSmall"
-                    android:text="[lading]"
-                    android:layout_weight=".35"
-                    android:paddingLeft="@dimen/small_margin"
+                    <TextView
+                        android:textAppearance="?android:attr/textAppearanceSmall"
+                        android:text="@string/lading"
+                        android:gravity="right"
+                        android:layout_width="match_parent"
+                        android:layout_weight=".65"
+                        android:layout_height="wrap_content" />
+
+                    <TextView
+                        android:id="@+id/tvSpotLading"
+                        android:textAppearance="?android:attr/textAppearanceSmall"
+                        android:text="[lading]"
+                        android:layout_weight=".35"
+                        android:paddingLeft="@dimen/small_margin"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content" />
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_below="@+id/llLading"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content" />
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:textAppearance="?android:attr/textAppearanceSmall"
+                        android:text="@string/instructions"
+                        android:gravity="right"
+                        android:layout_width="match_parent"
+                        android:layout_weight=".65"
+                        android:layout_height="wrap_content" />
+
+                    <TextView
+                        android:id="@+id/tvSpotInstructions"
+                        android:textAppearance="?android:attr/textAppearanceSmall"
+                        android:text="[instructions]"
+                        android:layout_weight=".35"
+                        android:paddingLeft="@dimen/small_margin"
+                        android:maxLines="2"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content" />
+                </LinearLayout>
+
             </LinearLayout>
 
-            <LinearLayout
-                android:layout_below="@+id/llLading"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal">
-
-                <TextView
-                    android:textAppearance="?android:attr/textAppearanceSmall"
-                    android:text="@string/instructions"
-                    android:gravity="right"
-                    android:layout_width="match_parent"
-                    android:layout_weight=".65"
-                    android:layout_height="wrap_content" />
-
-                <TextView
-                    android:id="@+id/tvSpotInstructions"
-                    android:textAppearance="?android:attr/textAppearanceSmall"
-                    android:text="[instructions]"
-                    android:layout_weight=".35"
-                    android:paddingLeft="@dimen/small_margin"
-                    android:maxLines="2"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content" />
-            </LinearLayout>
+        <ImageView
+            android:id="@+id/btnEdit"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="0"
+            android:src="@android:drawable/ic_menu_edit" />
 
         </LinearLayout>
 
-    <ImageView
-        android:id="@+id/btnEdit"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_weight="0"
-        android:src="@android:drawable/ic_menu_edit" />
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:layout_marginTop="@dimen/small_margin"
+            android:layout_marginBottom="@dimen/small_margin"
+            android:background="@android:color/darker_gray"/>
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:orientation="horizontal">
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:text="@string/days_to_hold"
+                android:textAppearance="?android:attr/textAppearanceSmall" />
+
+            <NumberPicker
+                android:id="@+id/npDays"
+                android:layout_width="match_parent"
+                android:paddingLeft="@dimen/small_margin"
+                android:layout_height="wrap_content"
+                android:fadeScrollbars="true" />
+
+        </LinearLayout>
 
     </LinearLayout>
-
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:layout_marginTop="@dimen/small_margin"
-        android:layout_marginBottom="@dimen/small_margin"
-        android:background="@android:color/darker_gray"/>
-
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-        android:orientation="horizontal">
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical"
-            android:text="@string/days_to_hold"
-            android:textAppearance="?android:attr/textAppearanceSmall" />
-
-        <NumberPicker
-            android:id="@+id/npDays"
-            android:layout_width="match_parent"
-            android:paddingLeft="@dimen/small_margin"
-            android:layout_height="wrap_content"
-            android:fadeScrollbars="true" />
-
-    </LinearLayout>
-
-
-</LinearLayout>
+</ScrollView>
