--- a/app/src/main/res/layout/fragment_town.xml
+++ b/app/src/main/res/layout/fragment_town.xml
@@ -33,8 +33,6 @@
         android:layout_width="match_parent"
         android:layout_height="0pt"
         android:layout_weight="1"
-        android:paddingTop="@dimen/small_margin"
-        android:paddingLeft="@dimen/small_margin"
-        android:paddingRight="@dimen/small_margin"/>
+        android:padding="@dimen/small_margin"/>
 
  </LinearLayout>
