--- a/app/src/main/res/layout/activity_car_add_edit.xml
+++ b/app/src/main/res/layout/activity_car_add_edit.xml
@@ -109,8 +109,7 @@
         <ListView
             android:id="@+id/lvCarSpots"
             android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="1"
+            android:layout_height="wrap_content"
             android:paddingLeft="@dimen/small_margin"
             android:paddingRight="@dimen/small_margin"/>
 
