--- a/app/src/main/res/layout/activity_spot_add_edit.xml
+++ b/app/src/main/res/layout/activity_spot_add_edit.xml
@@ -10,63 +10,61 @@
         android:layout_height="wrap_content"
         android:orientation="vertical">
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/activity_horizontal_margin"
-            android:layout_marginLeft="@dimen/small_margin"
-            android:text="@string/town" />
-
-        <EditText
-            android:id="@+id/etSpotTown"
-            android:layout_marginLeft="@dimen/small_margin"
-            android:layout_marginRight="@dimen/small_margin"
-            android:layout_marginBottom="@dimen/activity_horizontal_margin"
-            android:maxLines="1"
-            android:maxLength="16"
-            android:inputType="textCapWords"
-            android:nextFocusForward="@+id/etSpotIndustry"
-            android:textAppearance="?android:attr/textAppearanceMedium"
+        <android.support.design.widget.TextInputLayout
+            android:layout_marginTop="@dimen/small_margin"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content">
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="@dimen/small_margin"
-            android:text="@string/industry" />
+            <AutoCompleteTextView
+                android:id="@+id/actvSpotTown"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="@dimen/small_margin"
+                android:hint="@string/hint_town"
+                android:imeOptions="actionNext"
+                android:inputType="textCapWords"
+                android:maxLength="16"
+                android:maxLines="1"
+                android:nextFocusForward="@+id/etSpotIndustry"
+                android:textAppearance="?android:attr/textAppearanceMedium"/>
 
-        <EditText
-            android:id="@+id/etSpotIndustry"
-            android:layout_marginLeft="@dimen/small_margin"
-            android:layout_marginRight="@dimen/small_margin"
-            android:layout_marginBottom="@dimen/activity_horizontal_margin"
-            android:maxLines="1"
-            android:maxLength="16"
-            android:inputType="textCapWords"
-            android:nextFocusForward="@+id/etSpotIndustry"
-            android:textAppearance="?android:attr/textAppearanceMedium"
+        </android.support.design.widget.TextInputLayout>
+
+        <android.support.design.widget.TextInputLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content">
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="@dimen/small_margin"
-            android:text="@string/track" />
+            <EditText
+                android:id="@+id/etSpotIndustry"
+                android:layout_margin="@dimen/small_margin"
+                android:maxLines="1"
+                android:hint="@string/hint_industry"
+                android:maxLength="16"
+                android:inputType="textCapWords"
+                android:nextFocusForward="@+id/etSpotIndustry"
+                android:textAppearance="?android:attr/textAppearanceMedium"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
 
-        <EditText
-            android:id="@+id/etSpotTrack"
-            android:maxLines="1"
-            android:layout_marginLeft="@dimen/small_margin"
-            android:layout_marginRight="@dimen/small_margin"
-            android:layout_marginBottom="@dimen/activity_horizontal_margin"
-            android:inputType="textCapWords"
-            android:maxLength="16"
-            android:textAppearance="?android:attr/textAppearanceMedium"
-            android:nextFocusForward="@+id/etCarNotes"
+        </android.support.design.widget.TextInputLayout>
+
+        <android.support.design.widget.TextInputLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content">
+
+            <EditText
+                android:id="@+id/etSpotTrack"
+                android:maxLines="1"
+                android:hint="@string/hint_track"
+                android:layout_margin="@dimen/small_margin"
+                android:inputType="textCapWords"
+                android:maxLength="16"
+                android:textAppearance="?android:attr/textAppearanceMedium"
+                android:nextFocusForward="@+id/etCarNotes"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
+
+        </android.support.design.widget.TextInputLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
