--- a/app/src/main/res/layout/activity_car_add_edit.xml
+++ b/app/src/main/res/layout/activity_car_add_edit.xml
@@ -13,90 +13,84 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_marginTop="@dimen/small_margin"
-            android:orientation="horizontal"
-            android:layout_height="wrap_content">
-
-            <TextView
-                android:layout_weight=".3"
-                android:layout_width="0dp"
-                android:layout_marginLeft="@dimen/tiny_margin"
-                android:text="@string/hint_init"
-                android:layout_height="wrap_content" />
-
-            <TextView
-                android:layout_weight=".3"
-                android:layout_width="0dp"
-                android:layout_marginLeft="@dimen/tiny_margin"
-                android:text="@string/hint_num"
-                android:layout_height="wrap_content" />
-
-            <TextView
-                android:layout_weight=".4"
-                android:layout_width="0dp"
-                android:layout_marginLeft="@dimen/tiny_margin"
-                android:text="@string/hint_type"
-                android:layout_height="wrap_content" />
-
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/small_margin"
             android:orientation="horizontal">
 
-            <EditText
-                android:id="@+id/etCarInitials"
+            <android.support.design.widget.TextInputLayout
+                android:layout_width="0dp"
                 android:layout_weight=".3"
-                android:maxLines="1"
-                android:maxLength="6"
-                android:inputType="textCapCharacters"
-                android:nextFocusDown="@+id/etCarNumber"
-                android:textAppearance="?android:attr/textAppearanceMedium"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content" />
+                android:layout_height="wrap_content">
 
-            <EditText
-                android:id="@+id/etCarNumber"
+                <EditText
+                    android:id="@+id/etCarInitials"
+                    android:maxLines="1"
+                    android:hint="@string/hint_init"
+                    android:maxLength="6"
+                    android:inputType="textCapCharacters"
+                    android:nextFocusDown="@+id/etCarNumber"
+                    android:textAppearance="?android:attr/textAppearanceMedium"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content" />
+
+            </android.support.design.widget.TextInputLayout>
+
+            <android.support.design.widget.TextInputLayout
+                android:layout_width="0dp"
                 android:layout_weight=".3"
-                android:inputType="number"
-                android:maxLines="1"
-                android:maxLength="8"
-                android:nextFocusDown="@+id/spinCarType"
-                android:textAppearance="?android:attr/textAppearanceMedium"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"/>
+                android:layout_height="wrap_content">
 
-            <com.connriver.connrail.SpinnerPlus
-                android:id="@+id/spinCarType"
-                android:focusable="true"
-                android:focusableInTouchMode="true"
+                <EditText
+                    android:id="@+id/etCarNumber"
+                    android:inputType="number"
+                    android:maxLines="1"
+                    android:hint="@string/hint_num"
+                    android:maxLength="8"
+                    android:nextFocusDown="@+id/actvCarType"
+                    android:textAppearance="?android:attr/textAppearanceMedium"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"/>
+
+            </android.support.design.widget.TextInputLayout>
+
+            <android.support.design.widget.TextInputLayout
                 android:layout_width="0dp"
-                android:layout_height="wrap_content"
                 android:layout_weight=".4"
-                android:nextFocusDown="@+id/etCarNotes"
-                android:textAppearance="?android:attr/textAppearanceMedium"
-                android:entries="@array/car_types"
-                android:prompt="@string/hint_type"/>
+                android:layout_height="wrap_content">
+
+                <AutoCompleteTextView
+                    android:id="@+id/actvCarType"
+                    android:maxLines="1"
+                    android:hint="@string/hint_type"
+                    android:maxLength="12"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:inputType="textCapWords"
+                    android:imeOptions="actionNext"
+                    android:nextFocusForward="@+id/etCarNotes"
+                    android:textAppearance="?android:attr/textAppearanceMedium"/>
+
+            </android.support.design.widget.TextInputLayout>
 
         </LinearLayout>
 
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_marginTop="@dimen/activity_horizontal_margin"
-            android:layout_marginLeft="@dimen/tiny_margin"
-            android:text="@string/hint_notes"
-            android:layout_height="wrap_content" />
 
-        <EditText
-            android:id="@+id/etCarNotes"
-            android:maxLines="1"
-            android:inputType="textCapSentences"
-            android:maxLength="32"
-            android:textAppearance="?android:attr/textAppearanceMedium"
-            android:nextFocusDown="@+id/btnCarSave"
+        <android.support.design.widget.TextInputLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content">
+
+            <EditText
+                android:id="@+id/etCarNotes"
+                android:maxLines="1"
+                android:hint="@string/hint_notes"
+                android:inputType="textCapSentences"
+                android:maxLength="32"
+                android:textAppearance="?android:attr/textAppearanceMedium"
+                android:nextFocusDown="@+id/btnCarSave"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
+
+        </android.support.design.widget.TextInputLayout>
 
         <TextView
             android:text="@string/hint_spots"
