--- a/app/src/main/res/layout/dialog_car_spot_info.xml
+++ b/app/src/main/res/layout/dialog_car_spot_info.xml
@@ -5,37 +5,38 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="@dimen/small_margin"
+    <android.support.design.widget.TextInputLayout
         android:layout_marginTop="@dimen/small_margin"
-        android:text="@string/lading2" />
-
-    <EditText
-        android:id="@+id/etLading"
-        android:layout_marginLeft="@dimen/small_margin"
-        android:layout_marginRight="@dimen/small_margin"
         android:layout_width="match_parent"
-        android:inputType="textCapSentences"
-        android:nextFocusDown="@+id/etInstruct"
-        android:maxLength="24"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content">
 
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:paddingTop="@dimen/activity_horizontal_margin"
-        android:layout_marginLeft="@dimen/small_margin"
-        android:text="@string/instructions2" />
+        <EditText
+            android:id="@+id/etLading"
+            android:layout_marginLeft="@dimen/small_margin"
+            android:layout_marginRight="@dimen/small_margin"
+            android:hint="@string/lading2"
+            android:layout_width="match_parent"
+            android:inputType="textCapSentences"
+            android:nextFocusDown="@+id/etInstruct"
+            android:maxLength="24"
+            android:layout_height="wrap_content" />
 
-    <EditText
-        android:id="@+id/etInstruct"
-        android:layout_marginLeft="@dimen/small_margin"
-        android:layout_marginRight="@dimen/small_margin"
-        android:inputType="textCapSentences"
-        android:maxLength="24"
+    </android.support.design.widget.TextInputLayout>
+
+    <android.support.design.widget.TextInputLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content">
+
+        <EditText
+            android:id="@+id/etInstruct"
+            android:layout_marginLeft="@dimen/small_margin"
+            android:layout_marginRight="@dimen/small_margin"
+            android:hint="@string/instructions2"
+            android:inputType="textCapSentences"
+            android:maxLength="24"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+
+    </android.support.design.widget.TextInputLayout>
 
 </LinearLayout>
